syntax = "proto3";

package com.sanghoon.jvm_jst.h3.proto;

option java_package = "com.sanghoon.jvm_jst.h3.proto";
option java_outer_classname = "H3Emd10Proto";

// 단일 BjdongCellData
message BjdongCellDataProto {
  int32 bjdong_cd = 1;
  int32 cnt = 2;
  double sum_lat = 3;
  double sum_lng = 4;
}

// H3 인덱스에 대한 BjdongCellData 리스트
message BjdongCellListProto {
  repeated BjdongCellDataProto cells = 1;
}
